add fancy buttons to webinterface

--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,24 @@
         <title>Astro Starter</title>
 
         <style>
+            :root {
+                --green: #2ea043;
+                --yellow: #b5be2f;
+                --red: #a02e2e;
+
+                --dark-green: #238636;
+                --dark-yellow: #99922e;
+                --dark-red: #862323;
+
+                --white: #c9d1d9;
+                --border-grey: #30363d;
+                --dark-grey: #21262d;
+            }
+
             body {
                 font-family: Arial, Helvetica, sans-serif;
+                background-color: #0d1117;
+                color: var(--white);
             }
             #container {
                 max-width: 800px;
@@ -17,6 +33,7 @@
 
             fieldset {
                 margin-top: 25px;
+                border: 1px solid var(--border-grey);
                 border-radius: 10px;
             }
             h3 {
@@ -27,20 +44,50 @@
                 margin-block-end: 0.5em;
             }
 
-            .green {
-                background-color: #2ac416;
+            .greenText {
+                border: 1px solid var(--green);
                 border-radius: 4px;
-                padding: 3px;
+                padding: 4px;
             }
-            .yellow {
-                background-color: #edd91a;
+            .yellowText {
+                border: 1px solid var(--yellow);
                 border-radius: 4px;
-                padding: 3px;
+                padding: 4px;
             }
-            .red {
-                background-color: #c41616;
+            .redText {
+                border: 1px solid var(--red);
                 border-radius: 4px;
-                padding: 3px;
+                padding: 4px;
+            }
+
+            button {
+                font-weight: 550;
+                font-size: 1em;
+                border: 1px solid var(--border-grey);
+                background-color: var(--dark-grey);
+                border-radius: 4px;
+                padding: 4px;
+                color: var(--white);
+            }
+            button:disabled {
+                filter: brightness(50%);
+            }
+
+            .btnGreen {
+                border: 1px solid var(--green);
+                background-color: var(--dark-green);
+            }
+            .btnYellow {
+                border: 1px solid var(--yellow);
+                background-color: var(--dark-yellow);
+            }
+            .btnRed {
+                border: 1px solid var(--red);
+                background-color: var(--dark-red);
+            }
+
+            button:hover {
+                border: 1px solid var(--white);
             }
         </style>
     </head>
@@ -63,11 +110,21 @@
                     <p>
                         <span>IP/Port: </span><span class="serverAddr"></span>
                     </p>
-                    <span>Server Host: </span><span class="serverHost"></span
-                    ><br />
-                    <span>Server Type: </span><span class="serverType"></span
-                    ><br />
-                    <span>Owner: </span><span class="serverOwner"></span><br />
+                    <p>
+                        <span>Server Host: </span
+                        ><span class="serverHost"></span>
+                    </p>
+                    <p>
+                        <span>Server Type: </span
+                        ><span class="serverType"></span>
+                    </p>
+                    <p><span>Owner: </span><span class="serverOwner"></span></p>
+
+                    <p>
+                        <button class="btnStart btnGreen">Start</button>
+                        <button class="btnStop btnRed">Stop</button>
+                        <button class="btnRestart btnYellow">Restart</button>
+                    </p>
                 </fieldset>
             </template>
         </div>
@@ -80,10 +137,7 @@
         document
             .querySelector("#btnShutdown")
             .addEventListener("click", async (_) => {
-                await fetch("/api/shutdown", {
-                    method: "POST",
-                    body: "",
-                });
+                await fetch("/api/shutdown", { method: "POST" });
             });
 
         const update = async () => {
@@ -107,25 +161,29 @@
                 // server status
                 if (s.status === "stopped") {
                     field.querySelector(".serverStatus").innerText = "Stopped";
-                    field.querySelector(".serverStatus").classList.add("red");
+                    field
+                        .querySelector(".serverStatus")
+                        .classList.add("redText");
                     //
                 } else if (s.status === "starting") {
                     field.querySelector(".serverStatus").innerText =
                         "Starting...";
                     field
                         .querySelector(".serverStatus")
-                        .classList.add("yellow");
+                        .classList.add("yellowText");
                     //
                 } else if (s.status === "running") {
                     field.querySelector(".serverStatus").innerText = "Running";
-                    field.querySelector(".serverStatus").classList.add("green");
+                    field
+                        .querySelector(".serverStatus")
+                        .classList.add("greenText");
                     //
                 } else if (s.status === "stopping") {
                     field.querySelector(".serverStatus").innerText =
                         "Stopping...";
                     field
                         .querySelector(".serverStatus")
-                        .classList.add("yellow");
+                        .classList.add("yellowText");
                 }
 
                 // server id
@@ -159,12 +217,52 @@
                 // manage players
                 // manage saves
 
+                // action buttons
+                field
+                    .querySelector(".btnStop")
+                    .addEventListener("click", async (_) => {
+                        await fetch(`/api/servers/${s.id}/stop`, {
+                            method: "POST",
+                        });
+                    });
+                field
+                    .querySelector(".btnStart")
+                    .addEventListener("click", async (_) => {
+                        await fetch(`/api/servers/${s.id}/start`, {
+                            method: "POST",
+                        });
+                    });
+                field
+                    .querySelector(".btnRestart")
+                    .addEventListener("click", async (_) => {
+                        await fetch(`/api/servers/${s.id}/restart`, {
+                            method: "POST",
+                        });
+                    });
+
+                if (s.status === "stopped") {
+                    field.querySelector(".btnStop").style.display = "none";
+                    //
+                } else if (s.status === "starting") {
+                    field.querySelector(".btnStart").style.display = "none";
+                    field.querySelector(".btnStop").disabled = true;
+                    field.querySelector(".btnRestart").disabled = true;
+                    //
+                } else if (s.status === "running") {
+                    field.querySelector(".btnStart").style.display = "none";
+                    //
+                } else if (s.status === "stopping") {
+                    field.querySelector(".btnStop").style.display = "none";
+                    field.querySelector(".btnStart").disabled = true;
+                    field.querySelector(".btnRestart").disabled = true;
+                }
+
                 //console.log(s);
                 /*
                 players: [{…}]
                 playfabData: {Region: "USEast", LobbyID: "512496370981876417", BuildVersion: "8", GameMode: "CoopStandard", PlayerUserIds: Array(0), …}
                 stats: {build: "1.18.68.0", ownerName: "Konsti219", maxInGamePlayers: 8, playersInGame: 0, playersKnownToGame: 0, …}
-                whitelist: false*/
+                */
 
                 serversDiv.appendChild(field);
             });
