--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,40 @@
                 margin-block-end: 0.5em;
             }
 
+            /* general table stuff */
+            .tableRow {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+            }
+            .tableRow:first-child {
+                font-weight: 600;
+            }
+            /* borders */
+            .tableCell {
+                padding: 4px;
+                border-left: 1px solid var(--border-grey);
+                border-top: 1px solid var(--border-grey);
+            }
+            .tableCell:last-child {
+                border-right: 1px solid var(--border-grey);
+            }
+            .tableRow:last-child > .tableCell {
+                border-bottom: 1px solid var(--border-grey);
+            }
+            /* corners */
+            .tableRow:first-child > .tableCell:first-child {
+                border-radius: 5px 0 0 0;
+            }
+            .tableRow:first-child > .tableCell:last-child {
+                border-radius: 0 5px 0 0;
+            }
+            .tableRow:last-child > .tableCell:first-child {
+                border-radius: 0 0 0 5px;
+            }
+            .tableRow:last-child > .tableCell:last-child {
+                border-radius: 0 0 5px 0;
+            }
+
             .greenText {
                 border: 1px solid var(--green);
                 border-radius: 4px;
@@ -65,7 +99,7 @@
                 font-size: 1em;
                 border: 1px solid var(--border-grey);
                 background-color: var(--dark-grey);
-                border-radius: 4px;
+                border-radius: 5px;
                 padding: 4px;
                 color: var(--white);
             }
@@ -120,12 +154,28 @@
                     </p>
                     <p><span>Owner: </span><span class="serverOwner"></span></p>
 
+                    <div class="table playerTable">
+                        <div class="tableRow">
+                            <div class="tableCell">Name</div>
+                            <div class="tableCell">Cached</div>
+                            <div class="tableCell">Category</div>
+                        </div>
+                    </div>
+
                     <p>
                         <button class="btnStart btnGreen">Start</button>
                         <button class="btnStop btnRed">Stop</button>
                         <button class="btnRestart btnYellow">Restart</button>
                     </p>
                 </fieldset>
+            </template>
+
+            <template id="playerRow">
+                <div class="tableRow">
+                    <div class="tableCell"></div>
+                    <div class="tableCell"></div>
+                    <div class="tableCell"></div>
+                </div>
             </template>
         </div>
     </body>
@@ -211,6 +261,33 @@
                 // password
 
                 // players
+                s.players.forEach((p) => {
+                    const row = document
+                        .querySelector("#playerRow")
+                        .content.cloneNode(true);
+
+                    const divs = row.querySelectorAll("div");
+
+                    divs[1].textContent = p.name;
+                    divs[2].textContent = p.cached;
+                    divs[3].textContent = p.category;
+
+                    field.querySelector(".playerTable").appendChild(row);
+
+                    /*
+                    cached: false;
+                    category: "Owner";
+                    firstJoin: 1616538244213;
+                    firstJoinName: "konsti219";
+                    guid: "2479115687826661595";
+                    inGame: false;
+                    lastSeen: 0;
+                    name: "konsti219";
+                    onlineSince: 0;
+                    playfabid: "";
+                    prevPlaytime: 0;*/
+                });
+
                 // saves
 
                 // ability to change whitelist
@@ -269,5 +346,29 @@
         };
         setInterval(update, 2000);
         update();
+
+        // expand stuff
+        document
+            .querySelectorAll(".expand-item")
+            .forEach((el) => el.style.setProperty("visibility", "collapse"));
+        document.querySelectorAll(".expand-parent").forEach((el) => {
+            el.setAttribute("expanded", false);
+            el.addEventListener("click", (e) => {
+                const expanded = el.getAttribute("data-expanded") != "true";
+                el.setAttribute("data-expanded", expanded);
+                document
+                    .querySelectorAll(
+                        `.expand-item[data-expandgroup=${el.getAttribute(
+                            "data-expandgroup"
+                        )}]`
+                    )
+                    .forEach((item) =>
+                        item.style.setProperty(
+                            "visibility",
+                            expanded ? "" : "collapse"
+                        )
+                    );
+            });
+        });
     </script>
 </html>
