--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,10 @@
                 margin-block-start: 0.5em;
                 margin-block-end: 0.5em;
             }
+            a {
+                text-decoration: underline;
+                cursor: pointer;
+            }
 
             /* general table stuff */
             .tableRow {
@@ -260,7 +264,14 @@
                 field.querySelector(".serverName").innerText = s.name;
 
                 // server address
-                field.querySelector(".serverAddr").innerText = s.serverAddr;
+                field.querySelector(".serverAddr").innerText =
+                    s.serverAddr + " ";
+                const a = document.createElement("a");
+                a.addEventListener("click", () =>
+                    navigator.clipboard.writeText(s.serverAddr)
+                );
+                a.innerText = "Copy";
+                field.querySelector(".serverAddr").appendChild(a);
 
                 // host type (local/remote)
                 field.querySelector(".serverHost").innerText = s.serverType;
